--- a/student-records-app/public/header.html
+++ b/student-records-app/public/header.html
@@ -4,5 +4,6 @@
         <a href="/">Home</a> 
         <a href="/">About</a>
         <a href="/">Contact</a>
+        <a href = "/courses">Courses</a>
     </nav>
 </header>
