--- a/student-records-app/public/header.html
+++ b/student-records-app/public/header.html
@@ -1,9 +1,20 @@
-<header>
-    <h1>Student Platform (change later)</h1> <!--the name of the website-->
-    <nav> <!--list of links to all major sites for the platform for the nav bar-->
-        <a href="/">Home</a> 
-        <a href="/">About</a>
-        <a href="/">Contact</a>
-        <a href = "/courses">Courses</a>
-    </nav>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Header</title>
+  <link rel="stylesheet" href="header.css"> <!-- Link CSS -->
+</head>
+<body>
+    <header>
+        <h1>Student Platform (change later)</h1> <!--the name of the website-->
+        <nav> <!--list of links to all major sites for the platform for the nav bar-->
+            <a href="/">Home</a> 
+            <a href="/">About</a>
+            <a href="/">Contact</a>
+            <a href = "/courses">Courses</a>
+        </nav>
+    </header>
+</body>
+</html>
