Added some html for editGrades

--- a/student-records-app/public/header.html
+++ b/student-records-app/public/header.html
@@ -5,5 +5,6 @@
         <a href="/">About</a>
         <a href="/">Contact</a>
         <a href = "/courses">Courses</a>
+        <a href = "/editGrades.html">Edit Grades</a>
     </nav>
 </header>
