Changed the view of the courses

--- a/student-records-app/public/Courses.html
+++ b/student-records-app/public/Courses.html
@@ -42,15 +42,18 @@
 
     <!-- List of courses -->
     <ul id="courseList">
-        <li>Introduction to Programming</li>
-        <li>Data Structures</li>
-        <li>Web Development</li>
-        <li>Database Management</li>
-        <li>Machine Learning</li>
-        <li>Software Engineering</li>
-        <li>Cybersecurity Basics</li>
-        <li>Cloud Computing</li>
-        <li>Computer Networks</li>
+        <p>
+            Introduction to Programming<br>
+            Data Structures<br>
+            Web Development<br>
+            Database Management<br>
+            Machine Learning<br>
+            Software Engineering<br>
+            Cybersecurity Basics<br>
+            Cloud Computing<br>
+            Computer Networks
+        </p>
+        
     </ul>
 
     <script>
