--- a/student-records-app/public/header.html
+++ b/student-records-app/public/header.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Header</title>
-  <link rel="stylesheet" href="header.css"> <!-- Link CSS -->
+  
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
             <a href="/">About</a>
             <a href="/">Contact</a>
             <a href = "/courses">Courses</a>
-            <a href = "/editGrades.html">Edit Grades</a>
+            <a href = "/editGrades">Edit Grades</a>
         </nav>
     </header>
 </body>
