--- a/student-records-app/public/header.html
+++ b/student-records-app/public/header.html
@@ -13,7 +13,7 @@
             <a href="/">Home</a> 
             <a href="/">About</a>
             <a href="/">Contact</a>
-            <a href = "/courses">Courses</a>
+            <a href = "/courses">Search Courses</a>
             <a href = "/editGrades">Edit Grades</a>
         </nav>
     </header>
