create finance page and links to it

--- a/student-records-app/public/header.html
+++ b/student-records-app/public/header.html
@@ -14,6 +14,7 @@
             <a href="/">About</a>
             <a href="/">Contact</a>
             <a href = "/courses">Search Courses</a>
+            <a href = "/finances">Financial Dashboard</a>
             <a href = "/editGrades">Edit Grades</a>
         </nav>
     </header>
