--- a/student-records-app/public/header.html
+++ b/student-records-app/public/header.html
@@ -14,7 +14,7 @@
             <a href="/">About</a>
             <a href="/">Contact</a>
             <a href = "/courses">Courses</a>
-            <a href = "/editGrades.html">Edit Grades</a>
+            <a href = "/editGrades">Edit Grades</a>
         </nav>
     </header>
 </body>
