payment page created

--- a/student-records-app/public/finances.html
+++ b/student-records-app/public/finances.html
@@ -11,7 +11,7 @@
         <p>Current Account Balance: </p> <!--for all of these it is going to need to be added the real data-->
         <p>Amount due in next 30 days: </p>
         <p>Total future amout due: </p>
-        <a href="/finances">Pay Tuition</a>
+        <a href="/makePayment">Pay Tuition</a>
         <a href="/finances">Change financial information</a>
         <div class="info-table">
             <h3>Billing Methods: </h3>
