--- a/student-records-app/public/footer.html
+++ b/student-records-app/public/footer.html
@@ -8,5 +8,5 @@
         Phone: <a href="tel:+11234567890">(123) 456-7890</a> |
         Email: <a href="mailto:support@example.com">support@gmail.com</a>
       </p>
-    <p>© 2025 Student Platform Inc. All rights reserved.</p> <!--copy right statement for fun-->
+    <p>© 2025 Werkday Inc. All rights reserved.</p> <!--copy right statement for fun-->
 </footer>
