--- a/student-records-app/public/header.html
+++ b/student-records-app/public/header.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Student Platform (change later)</h1> <!--the name of the website-->
+        <h1>Werkday</h1> <!--the name of the website-->
         <nav> <!--list of links to all major sites for the platform for the nav bar-->
             <a href="/">Home</a> 
             <a href="/">About</a>
