--- a/student-records-app/public/header.html
+++ b/student-records-app/public/header.html
@@ -10,9 +10,7 @@
     <header>
         <h1>Werkday</h1> <!--the name of the website-->
         <nav> <!--list of links to all major sites for the platform for the nav bar-->
-            <a href="/">Home</a> 
-            <a href="/">About</a>
-            <a href="/">Contact</a>
+            <a href="/Dashboard">Home</a> 
             <a href = "/finances">Financial Dashboard</a>
             <a href = "/courses">Courses</a>
             <a href = "/editGrades">Edit Grades</a>
