--- a/student-records-app/public/finances.html
+++ b/student-records-app/public/finances.html
@@ -12,7 +12,7 @@
         <p>Amount due in next 30 days: </p>
         <p>Total future amout due: </p>
         <a href="/makePayment">Pay Tuition</a>
-        <a href="/finances">Change financial information</a>
+        <a href="/addPaymentMethod">Change financial information</a>
         <div class="info-table">
             <h3>Billing Methods: </h3>
             <div id="billing-tables"></div>
